--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,6 @@
 .header{
-    max-width: 880px;
+    width: 100%;
     position: relative;
-    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-content: space-between;
