feat: code gallery section

--- a/pages/index.css
+++ b/pages/index.css
@@ -13,3 +13,10 @@
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__job-description/profile__job-description.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/gallery/gallery.css);
+@import url(../blocks/gallery/__list/gallery__list.css);
+@import url(../blocks/gallery/__item/gallery__item.css);
+@import url(../blocks/gallery/__photo/gallery__photo.css);
+@import url(../blocks/gallery/__description/gallery__description.css);
+@import url(../blocks/gallery/__text/gallery__text.css);
+@import url(../blocks/gallery/__like-button/gallery__like-button.css);
