--- a/pages/index.css
+++ b/pages/index.css
@@ -13,3 +13,5 @@
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__job-description/profile__job-description.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyrights/footer__copyrights.css);
