feat: code responsive

--- a/blocks/footer/__copyrights/footer__copyrights.css
+++ b/blocks/footer/__copyrights/footer__copyrights.css
@@ -6,3 +6,9 @@
     padding: 0;
     margin: 0;
 }
+
+@media  screen and (max-width: 760) {
+    .footer__copyrights {
+        font-size: 14px;
+    }
+}
