--- a/blocks/gallery/__photo/gallery__photo.css
+++ b/blocks/gallery/__photo/gallery__photo.css
@@ -1,6 +1,24 @@
 .gallery__photo {
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-    width: 282px;
+    width: 100%;
     height: 282px;
+}
+
+@media screen and (max-width: 980px) {
+    .gallery__photo {
+        height: 342px;
+    }
+}
+
+@media screen and (max-width: 760px) {
+    .gallery__photo {
+        height: 500px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .gallery__photo {
+        height: 282px;
+    }
 }
