--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -1,6 +1,11 @@
 .gallery {
     width: 100%;
     position: relative;
-    margin-top: 71px;
-    
+    margin: 71px auto 0;
+}
+
+@media screen and (max-width: 550px) {
+    .gallery {
+        width: 88.125%;
+    }
 }
