--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,8 +5,10 @@
     box-sizing: border-box;
     padding-top: 45px;
     padding-bottom: 60px;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
+    font-family: "Inter";
     color: #FFFFFF;
     ;
 }
