--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,3 +1,10 @@
 .profile__avatar {
     min-width: 120px;
 }
+
+
+@media screen and (max-width: 550px) {
+    .profile__avatar {
+        max-width: 120px;
+    }
+}
