--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,8 +1,29 @@
 .profile__info {
-    width: 415px;
+    width: 47.159%;
     margin: 22px 165px 21px 30px;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
     position: relative;
+}
+
+@media screen and (max-width: 980px) {
+    .profile__info {
+        margin: 22px 90px 22px 30px;
+    }
+}
+
+@media screen and (max-width: 760px) {
+    .profile__info {
+        width: 60%;
+        margin: 22px auto;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .profile__info {
+        width: 100%;
+        margin: 26px auto 36px;
+    }
 }
