--- a/blocks/profile/__job-description/profile__job-description.css
+++ b/blocks/profile/__job-description/profile__job-description.css
@@ -5,4 +5,13 @@
     font-style: normal;
     padding: 0;
     margin: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 550px) {
+    .profile__job-description {
+        font-size: 14px;
+    }
 }
