--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,8 +1,35 @@
 .profile__name {
-    font-size: 45px;
+    font-size: 42px;
     line-height: 1.06;
     font-weight: 500;
     font-style: normal;
     padding: 0;
     margin: 0 18px 16px 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 980px) {
+    .profile__name {
+        font-size: 30px;
+        margin-bottom: 10px;
+    }
+}
+
+@media screen and (max-width: 760px) {
+    .profile__name {
+        margin-right: 10px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .profile__name {
+        width: 69.503%;
+        font-size: 22px;
+        line-height: 1.21;
+        text-align: center;
+        margin-bottom: 14px;
+        margin-left: 29px;
+    }
 }
