--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,3 +4,18 @@
     position: relative;
     display: flex;
 }
+
+@media screen and (max-width: 760px) {
+    .profile {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+
+@media screen and (max-width: 550px) {
+    .profile {
+        width: 88.125%;
+        margin: 42px auto 0;
+    }
+}
