--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -6,10 +6,8 @@
     width: 40px;
     height: 40px;
     position: absolute;
-    top: 0;
-    right: 0;
+    top: -40px;
+    right: -40px;
     border: none;
     padding: 0;
-    opacity: 1;
-    z-index: 1;
 }
