--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,7 +1,6 @@
 .popup__container {
     position: relative;
     width: 430px;
-    height: 330px;
-    opacity: 1;
-    z-index: 1;
+    display: flex;
+    flex-direction: column;
 }
