--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,9 +4,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: black;
-    opacity: 0.5;
-    display: flex;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
     justify-content: center;
     align-items: center;
 }
