--- a/blocks/popup/__form-submit-button/popup__form-submit-button.css
+++ b/blocks/popup/__form-submit-button/popup__form-submit-button.css
@@ -10,4 +10,10 @@
     padding-top: 13px;
     padding-bottom: 18px;
     box-sizing: border-box;
+    transition: ease-in-out 0.5s;
+}
+
+.popup__form-submit-button:hover {
+    background-color: rgba(0,0,0, 0.8);
+    cursor: pointer;
 }
