--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -4,3 +4,10 @@
     display: flex;
     flex-direction: column;
 }
+
+
+@media screen and (max-width: 550px) {
+    .content {
+        width: 282px;
+    }
+}
