--- a/blocks/popup/__form-input/popup__form-input.css
+++ b/blocks/popup/__form-input/popup__form-input.css
@@ -13,3 +13,13 @@
 .popup__form-input:last-of-type {
     margin-bottom: 48px;
 }
+
+@media screen and (max-width: 550px) {
+    .popup__form-input {
+        padding-bottom: 9px;
+    }
+
+    .popup__form-input:last-of-type {
+        margin-bottom: 46px;
+    }
+}
