--- a/blocks/popup/__form-title/popup__form-title.css
+++ b/blocks/popup/__form-title/popup__form-title.css
@@ -3,3 +3,9 @@
     line-height: 1.2;
     font-weight: 900;
 }
+
+@media screen and (max-width: 550px) {
+    .popup__form-title {
+        font-size: 18px;
+    }
+}
