--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -20,5 +20,8 @@
 @media screen and (max-width: 550px) {
     .popup__close-button {
         width: 26px;
-        height: 26px;    }
+        height: 26px;
+        top: -26px;
+        right: -26px;
+    }
 }
