--- a/blocks/profile/__job-description/profile__job-description.css
+++ b/blocks/profile/__job-description/profile__job-description.css
@@ -13,5 +13,6 @@
 @media screen and (max-width: 550px) {
     .profile__job-description {
         font-size: 14px;
+        text-align: center;
     }
 }
