--- a/blocks/footer/__copyrights/footer__copyrights.css
+++ b/blocks/footer/__copyrights/footer__copyrights.css
@@ -7,7 +7,7 @@
     margin: 0;
 }
 
-@media  screen and (max-width: 760) {
+@media screen and (max-width: 760px) {
     .footer__copyrights {
         font-size: 14px;
     }
