--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,5 +5,5 @@
     flex-direction: column;
     align-content: space-between;
     justify-content: flex-start;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
