style: add max-width to profile__name and profile__job-description

--- a/blocks/profile/__job-description/profile__job-description.css
+++ b/blocks/profile/__job-description/profile__job-description.css
@@ -8,11 +8,13 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    max-width: 358px;
 }
 
 @media screen and (max-width: 550px) {
     .profile__job-description {
         font-size: 14px;
         text-align: center;
+        max-width: 238px;
     }
 }
