refactor: add 'profile__info-title' div

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,6 +2,7 @@
     width: 47.159%;
     margin: 22px 165px 21px 30px;
     display: flex;
+    flex-direction: column;
     justify-content: flex-start;
     position: relative;
 }
