refactor: create popups for display images and create post, feat: add delete button, like button and add button

--- a/blocks/gallery/__photo/gallery__photo.css
+++ b/blocks/gallery/__photo/gallery__photo.css
@@ -5,6 +5,10 @@
     height: 282px;
 }
 
+.gallery__photo:hover {
+    cursor: pointer;
+}
+
 @media screen and (max-width: 980px) {
     .gallery__photo {
         height: 342px;
