--- a/pages/index.css
+++ b/pages/index.css
@@ -31,6 +31,9 @@
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__form-title/popup__form-title.css);
 @import url(../blocks/popup/__form-input/popup__form-input.css);
+@import url(../blocks/popup/__form-input/_type/popup__form-input_type_error.css);
+@import url(../blocks/popup/__form-input-error/_active/popup__form-input-error_active.css);
 @import url(../blocks/popup/__form-submit-button/popup__form-submit-button.css);
+@import url(../blocks/popup/__form-submit-button/_inactive/popup__form-submit-button_inactive.css);
 @import url(../blocks/popup/__photo/popup__photo.css);
 @import url(../blocks/popup/__text/popup__text.css);
