--- a/src/blocks/popup/__form-input/_type/popup__form-input_type_error.css
+++ b/src/blocks/popup/__form-input/_type/popup__form-input_type_error.css
@@ -1,8 +1,8 @@
 .popup__form-input_type_error {
-    border-bottom: 1px solid #FF0000;
-    margin-bottom: 0;
+  border-bottom: 1px solid #ff0000;
+  margin-bottom: 0;
 }
 
 .popup__form-input_type_error:last-of-type {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
