--- a/src/blocks/profile/__picture/profile__picture.css
+++ b/src/blocks/profile/__picture/profile__picture.css
@@ -2,8 +2,8 @@
   width: 120px;
   min-height: 120px;
   border-radius: 50%;
-  background-image: url(../../images/profile-picture.jpg);
+  /* background-image: url(../../images/profile-picture.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
 }
